--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.0",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.11"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
